dist/1.0/bin/sample/retrieveUnpackaged/objects/ComponentAttribute__c.object
<CustomObject>
    <description>Stores information about Attributes under Service Component</description>
    <fields>
        <fullName>AttributeType__c</fullName>
        <description>Type of the Attribute (used in case of IS Services, where no Attribute Definition exists)</description>
        <inlineHelpText>Type of the Attribute (used in case of IS Services, where no Attribute Definition exists)</inlineHelpText>
        <label>Attribute Type</label>
        <picklist>
            <picklistValues>
                <fullName>Circuit ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Port</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-end customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AttributeValue__c</fullName>
        <description>Value of the Attribute (Short value, visible within labels)</description>
        <inlineHelpText>Value of the Attribute</inlineHelpText>
        <label>Attribute Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <description>Relation to Attribute Definition</description>
        <inlineHelpText>Relation to Attribute Definition</inlineHelpText>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Component Attributes</relationshipLabel>
        <relationshipName>Component_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSR_Id__c</fullName>
        <description>ID of the Attribute in CSR database</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the Attribute in CSR database</inlineHelpText>
        <label>CSR_Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP__c</fullName>
        <description>ID of Generic Product on which the Attribute is installed in CSR Database</description>
        <inlineHelpText>ID of Generic Product on which the Attribute is installed in CSR Database</inlineHelpText>
        <label>GP CsrID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Product_Attribute__c</fullName>
        <description>Relation to Generic Product-Attribute object</description>
        <inlineHelpText>Relation to Generic Product-Attribute object</inlineHelpText>
        <label>Generic Product Attribute</label>
        <referenceTo>Generic_Product_Attribute__c</referenceTo>
        <relationshipLabel>Component Attributes</relationshipLabel>
        <relationshipName>Component_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generic_Product__c</fullName>
        <description>Parent Generic Product for Attribute</description>
        <inlineHelpText>Parent Generic Product for Attribute</inlineHelpText>
        <label>Generic Product</label>
        <referenceTo>Generic_Product__c</referenceTo>
        <relationshipLabel>Component Attributes</relationshipLabel>
        <relationshipName>Component_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSS_Link__c</fullName>
        <description>Direct Link to OSS Enumerator (in case of Attributes related to OSS)</description>
        <formula>IF( OSSid__c != &apos;&apos; &amp;&amp; ISPICKVAL(Attribute__r.EnumeratorOSS__c , &apos;IE_DN&apos;) , HYPERLINK(&apos;http://dione1.gtsgroup.cz/idengine/ce_ie_dn/index.htm?rec_id=&apos; +  OSSid__c , OSSid__c),
HYPERLINK(&apos;http://dione1.gtsgroup.cz/idengine/ce_ie_circ/index.htm?circ_id=&apos; +  OSSid__c , OSSid__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Direct Link to OSS Enumerator (in case of Attributes related to OSS)</inlineHelpText>
        <label>OSS Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSSid__c</fullName>
        <description>ID from OSS (in case of Attributes related to OSS enumerators)</description>
        <inlineHelpText>ID from OSS (in case of Attributes related to OSS enumerators)</inlineHelpText>
        <label>OSSid</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <formula>If(Generic_Product_Attribute__r.Phone_Number__c, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceComponent__c</fullName>
        <description>Reference to the Service Component where this attribute belongs to</description>
        <inlineHelpText>Reference to the Service Component where this attribute belongs to</inlineHelpText>
        <label>Service Component</label>
        <referenceTo>ServiceComponent__c</referenceTo>
        <relationshipLabel>Component Attributes</relationshipLabel>
        <relationshipName>Component_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceRecordID__c</fullName>
        <description>ID of Attribute from Local System</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of Attribute from Local System</inlineHelpText>
        <label>Source Record ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Attribute; corresponds to Attribute Lifecycle</description>
        <inlineHelpText>Status of Attribute; corresponds to Attribute Lifecycle</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_long__c</fullName>
        <description>Value of the Attribute (Full value used by Configurator and in Communication with external systems)</description>
        <inlineHelpText>Value of the Attribute (Full value used by Configurator and in Communication with external systems)</inlineHelpText>
        <label>Value (long)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Component Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AttributeType__c</columns>
        <columns>AttributeValue__c</columns>
        <columns>ServiceComponent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Search_CPS</fullName>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <columns>Attribute__c</columns>
        <columns>AttributeType__c</columns>
        <columns>ServiceComponent__c</columns>
        <columns>Generic_Product__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute__c</field>
            <operation>equals</operation>
            <value>HU_CPS_Main number</value>
        </filters>
        <filters>
            <field>AttributeValue__c</field>
            <operation>contains</operation>
            <value>157796</value>
        </filters>
        <filters>
            <field>Attribute__c</field>
            <operation>equals</operation>
            <value>CE_Number range</value>
        </filters>
        <filters>
            <field>AttributeValue__c</field>
            <operation>contains</operation>
            <value>157796</value>
        </filters>
        <label>Search_CPS</label>
        <sharedTo>
            <groups>GTS Datanet Retail</groups>
            <groups>GTS Datanet Wholesale</groups>
            <groups>HU Business Customer Care</groups>
            <groups>HU Provisioning Mangers</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>gn</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>AttributeType__c</columns>
        <columns>AttributeValue__c</columns>
        <columns>ServiceComponent__c</columns>
        <columns>SourceRecordID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>3465</value>
        </filters>
        <label>gn</label>
    </listViews>
    <nameField>
        <displayFormat>CAT{000000000}</displayFormat>
        <label>Component Attribute ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>